--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Rémy Raes",
   "license": "GPL-3.0",
   "devDependencies": {
-    "electron": "^1.6.11"
+    "electron": "^1.6.11",
+	"electron-json-storage-sync": "^1.1.0"
   }
 }
