--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
   "license": "GPL-3.0",
   "devDependencies": {
     "electron": "^1.6.11",
-    "electron-json-storage-sync": "^1.1.0",
-    "electron-packager": "^10.1.0",
-    "konami-code": "^0.2.1"
+    "electron-packager": "^10.1.0"
   },
   "dependencies": {
     "electron-json-storage-sync": "^1.1.0",
