--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "package-windows": "electron-packager . Universe --platform=win32 --arch=ia32 --prune=true --icon=assets/img/icons/star.ico --appCopyright=\"G33k Team - ESN France - All rights reserved\" --overwrite",
     "package-mac": "electron-packager . Universe --platform=darwin --arch=x64 --prune=true --icon=assets/img/icons/star.icns --appCopyright=\"G33k Team - ESN France - All rights reserved\" --overwrite",
     "package-linux": "electron-packager . Universe --platform=linux --arch=ia32 --prune=true --appCopyright=\"G33k Team - ESN France - All rights reserved\" --overwrite",
+
     "create-windows-installer": "npm run package-windows && node installers/winstaller.js",
-    "create-mac-installer": "npm run package-mac && electron-installer-dmg Universe-darwin-x64 Universe --out=./ --icon=assets/img/icons/star.icns --background=assets/img/icons/star.icns --overwrite"
+    "create-mac-installer": "npm run package-mac && electron-installer-dmg Universe-darwin-x64 Universe --out=./ --icon=assets/img/icons/star.icns --background=assets/img/icons/star.icns --overwrite",
+
+    "generate-doc": "node documentation/gendoc.js > documentation/readme.md && echo Done!"
   },
   "author": "G33k Team - ESN France",
   "license": "GPL-3.0",
@@ -17,12 +20,12 @@
     "electron": "^1.7.9",
     "electron-installer-dmg": "^0.2.1",
     "electron-packager": "^10.1.0",
-    "electron-winstaller": "^2.6.3"
+    "electron-winstaller": "^2.6.3",
+    "jsdoc-to-markdown": "^3.1.0-0"
   },
   "dependencies": {
     "electron-is-dev": "^0.3.0",
     "electron-json-storage-sync": "^1.1.0",
-    "electron-notifications": "^1.0.0",
     "electron-squirrel-startup": "^1.0.0",
     "konami-code": "^0.2.1"
   }
