--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "package-linux": "electron-packager . Universe --platform=linux --arch=ia32 --prune=true --appCopyright=\"G33k Team - ESN France - All rights reserved\" --overwrite",
     "create-windows-installer": "npm run package-windows && node installers/winstaller.js",
     "create-mac-installer": "npm run package-mac && electron-installer-dmg Universe-darwin-x64 Universe --out=./ --icon=assets/img/icons/logo.icns --background=assets/img/icons/logo.icns --overwrite",
+    "create-linux-installer": "electron-installer-debian --src Universe-linux-ia32 --dest dist/installers/ --arch ia32",
     "generate-doc": "node documentation/gendoc.js --private > documentation/readme.md && echo Done!"
   },
   "author": "G33k Team - ESN France",
   "license": "GPL-3.0",
   "devDependencies": {
     "electron": "^1.7.9",
+    "electron-installer-debian": "^0.7.1",
     "electron-installer-dmg": "^0.2.1",
     "electron-packager": "^10.1.0",
     "electron-winstaller": "^2.6.3",
